# TinyColor

./: CMakeLists.txt  LICENSE  README.md
cmake/: TinyColorConfig.cmake.in
include/TinyColor/: TinyColor.hpp
